# block_tokenizer

./: .gitignore  Cargo.toml  README.md  blockchain_data.json  docker-compose.yaml
API/: go.mod  go.sum
API/cmd/: main.go
API/internal/database/: database.go
API/internal/handlers/: GasHandler.go  blockHandler.go  healthHandler.go
API/internal/kafkahandler/: kafkaConsumer.go  kafkaProducer.go
API/internal/services/: blockchainErrorService.go  blockchainService.go
Geth/: .env  go.mod  go.sum  main.go
src/: block.rs  blockchain.rs  blockchain_data.json  ethereum.rs  main.rs
