[package]
name = "block_tokenizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rust-crypto = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.3"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
lazy_static = "1.4.0"
mongodb = "2.2.1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
ethers = "2.0.14"

